Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION: higher geography column wrap

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2351,7 +2351,7 @@ ol.flow {
 }
 ol.flow li a {
 	display: inline-block;
-	padding-right: 35px;
+	padding-right: 15px;
 }
 ol.flow-islandgroups {
 	display:flex;
@@ -2361,7 +2361,7 @@ ol.flow-islandgroups {
 }
 ol.flow-islandgroups li a {
 	display: inline-block;
-	padding-right: 35px;
+	padding-right: 15px;
 }
 ol.flow-manyislandgroups {
 	display:flex;
@@ -2371,7 +2371,7 @@ ol.flow-manyislandgroups {
 }
 ol.flow-manyislandgroups li a {
 	display: inline-block;
-	padding-right: 35px;
+	padding-right: 15px;
 }
 
 
